# BART

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  const.py  messenger.py  pyproject.toml  runner.py  trainer.py
data/: __init__.py  chat_data.py  const.py  dataset.py  input_data.py  model_input.py  tokenizer.py
model/: __init__.py  models.py
